- Se crea módulo para la gestión del chequeo de valores. - Se crea componente genérico Input-Number de PrimeNG.

--- a/src/app/shared/ui/prime-ng/prime-ng.scss
+++ b/src/app/shared/ui/prime-ng/prime-ng.scss
@@ -40,6 +40,10 @@
     }
 }
 
+p-inputnumber, .p-inputnumber {
+    text-align-last: right !important;
+}
+
 .p-float-label label {
     margin-top: -.3rem !important;
 }
