--- a/src/app/shared/ui/prime-ng/prime-ng.scss
+++ b/src/app/shared/ui/prime-ng/prime-ng.scss
@@ -140,6 +140,10 @@ p-inputnumber, .p-inputnumber {
     padding: .5rem !important;
 }
 
+.p-datatable .p-datatable-tfoot>tr>td {
+    padding: .5rem !important;
+}
+
 .p-paginator .p-dropdown, 
 .p-paginator .p-paginator-current,
 .p-paginator .p-paginator-first, 
