--- a/src/app/concilia-golden-dwh/concilia-golden-dwh.component.html
+++ b/src/app/concilia-golden-dwh/concilia-golden-dwh.component.html
@@ -405,7 +405,7 @@
                             <ng-template pTemplate="body" let-alm>
                                 <tr>
                                     <td>{{ alm.Almacen }}</td>
-                                    <td>{{ alm.CuentaG }}</td>
+                                    <td>{{ alm.Cuenta }}</td>
                                     <td>{{ alm.CuentaR }}</td>
                                 </tr>
                             </ng-template>
