--- a/src/app/shared/ui/prime-ng/input-email/input-email.component.html
+++ b/src/app/shared/ui/prime-ng/input-email/input-email.component.html
@@ -15,7 +15,8 @@
     </label>
     <input
         [id]="control"
-        type="text"
+        type="email"
+        email="true"
         pInputText
         [formControlName]="control"
         [placeholder]="placeholder"
