Se realizan correcciones en los modulos de AFT, Contabilidad, y Table de prime-ng

--- a/src/app/concilia-aft/concilia-aft.component.html
+++ b/src/app/concilia-aft/concilia-aft.component.html
@@ -22,9 +22,7 @@
                                     label="Centro"
                                     [optionsValues]="centrosValues"
                                     placeholder="Seleccione el Centro"
-                                    [filter]="true"
-                                    [required]="true"
-                                    [showClear]="true"></png-dropdown>
+                                    [required]="true"></png-dropdown>
                             </div>
                             <div>
                                 <png-dropdown
