--- a/src/app/shared/ui/prime-ng/table/table.component.scss
+++ b/src/app/shared/ui/prime-ng/table/table.component.scss
@@ -20,3 +20,7 @@
     height: 1.2rem !important;
     width: 1.2rem !important;
 }
+
+.selected-row {
+    background-color: rgba(lightgrey, .4) !important;
+}
