--- a/src/app/concilia-contabilidad/concilia-contabilidad.component.html
+++ b/src/app/concilia-contabilidad/concilia-contabilidad.component.html
@@ -162,9 +162,10 @@
                 <png-table
                     [columns]="displayedColumnsCentrosSubordinados"
                     [data]="dataSourceCentrosSubordinados"
+                    (selectedRows)="updateSelectedCentrosChequeo($event)"
                     [paginator]="false"
                     [filterData]="false"
-                    [canSelect]="true"
+                    [selectCheckbox]="true"
                     [scrollable]="true"
                     scrollHeight="calc(100vh - 165px)"></png-table>
             </p-panel>
