- Se actualiza la versión de Angular a la 13.3.0 - Se inlcuye la posibilidad de mostrar o no el texto en los campos de tipo password.

--- a/src/app/shared/ui/add-edit-item/add-edit-item.component.html
+++ b/src/app/shared/ui/add-edit-item/add-edit-item.component.html
@@ -1,22 +1,22 @@
 <div class="item">
-  <png-card class="m-2">
-    <div>
-      <ng-content></ng-content>
+    <png-card>
+        <div>
+            <ng-content></ng-content>
+        </div>
+    </png-card>
+    <div class="flex justify-content-end mt-2">
+        <png-button
+            class="mr-2 mb-2"
+            label="Aceptar"
+            [style]="'primary'"
+            [raised]="true"
+            [disabled]="fg && !fg.valid"
+            (clicked)="save()"></png-button>
+        <png-button
+            class="mr-2 mb-2"
+            label="Cancelar"
+            [style]="'secondary'"
+            [raised]="true"
+            (clicked)="cancel()"></png-button>
     </div>
-  </png-card>
-  <div class="flex justify-content-end">
-    <png-button
-      class="mr-2 mb-2"
-      label="Aceptar"
-      [style]="'primary'"
-      [raised]="true"
-      [disabled]="fg && !fg.valid"
-      (clicked)="save()"></png-button>
-    <png-button
-      class="mr-2 mb-2"
-      label="Cancelar"
-      [style]="'secondary'"
-      [raised]="true"
-      (clicked)="cancel()"></png-button>
-  </div>
 </div>
