--- a/src/app/shared/ui/prime-ng/table/table.component.html
+++ b/src/app/shared/ui/prime-ng/table/table.component.html
@@ -31,7 +31,7 @@
     [groupRowsBy]="groupField"
     styleClass="p-datatable-gridlines"
     [paginator]="paginator"
-    [(selection)]="selectedRowDatas"
+    [(selection)]="selectedRowsData"
     [dataKey]="groupField"
     [rows]="25"
     [rowsPerPageOptions]="[25, 50, 100]"
