--- a/src/app/usuarios/change-password/change-password.component.html
+++ b/src/app/usuarios/change-password/change-password.component.html
@@ -1,31 +1,32 @@
-<p-card class="login">
-  <form [formGroup]="fg">
-    <div class="mt-2">
-      <png-input-text
-        class="w-full mt-1"
-        label="Usuario"
-        [fg]="fg"
-        control="usuario"
-        [required]="true"
-        autocomplete="off"></png-input-text>
-    </div>
-    <div>
-      <png-password
-        class="w-full"
-        [fg]="fg"
-        control="password"
-        label="Nueva Contraseña"
-        [required]="true"
-        autocomplete="off"></png-password>
-    </div>
-    <div>
-      <png-password
-        class="w-full"
-        [fg]="fg"
-        control="contrasenaConfirm"
-        label="Confirmar Contraseña"
-        [required]="true"
-        autocomplete="off"></png-password>
-    </div>
-  </form>
-</p-card>
+<app-add-edit-item [fg]="fg" (actionClicked)="onActionClicked($event)">
+    <form [formGroup]="fg">
+        <div class="mt-2">
+            <png-input-text
+                class="w-full mt-1"
+                label="Usuario"
+                [fg]="fg"
+                control="usuario"
+                [required]="true"
+                [disabled]="true"
+                autocomplete="off"></png-input-text>
+        </div>
+        <div>
+            <png-password
+                class="w-full"
+                [fg]="fg"
+                control="contrasena"
+                label="Nueva Contraseña"
+                [required]="true"
+                autocomplete="off"></png-password>
+        </div>
+        <div>
+            <png-password
+                class="w-full"
+                [fg]="fg"
+                control="contrasenaConfirm"
+                label="Confirmar Contraseña"
+                [required]="true"
+                autocomplete="off"></png-password>
+        </div>
+    </form>
+</app-add-edit-item>
