--- a/src/app/conexion-rodas/conexion-rodas-form/conexion-rodas-form.component.html
+++ b/src/app/conexion-rodas/conexion-rodas-form/conexion-rodas-form.component.html
@@ -1,93 +1,94 @@
 <app-add-edit-item [fg]="fg" (actionClicked)="onActionClicked($event)">
-  <form [formGroup]="fg" style="width: 350px">
-    <div>
-      <png-dropdown
-        class="w-full mt-1"
-        [fg]="fg"
-        control="idDivision"
-        label="División"
-        labelWidth="90"
-        [optionsValues]="divisionesValues"
-        placeholder="&lt;División&gt;"
-        [required]="true"
-        [filter]="true"
-        [showClear]="true"></png-dropdown>
-    </div>
-    <div>
-      <png-dropdown
-        class="w-full mt-1"
-        [fg]="fg"
-        control="idUnidad"
-        label="Centro"
-        labelWidth="90"
-        [optionsValues]="unidadesValues"
-        placeholder="&lt;Unidad&gt;"
-        [required]="true"
-        [filter]="true"
-        [showClear]="true"></png-dropdown>
-    </div>
-    <div>
-      <png-checkbox
-        class="w-full mt-1"
-        label="Consolidado"
-        [fg]="fg"
-        control="consolidado"></png-checkbox>
-    </div>
-    <div>
-      <png-input-text
-        class="w-full mt-1"
-        label="Servidor"
-        labelWidth="90"
-        [fg]="fg"
-        control="ip"
-        [required]="true"
-        autocomplete="off"></png-input-text>
-    </div>
-    <div>
-      <png-input-text
-        class="w-full mt-1"
-        label="Usuario"
-        labelWidth="90"
-        [fg]="fg"
-        control="usuario"
-        [required]="true"
-        autocomplete="off"></png-input-text>
-    </div>
-    <div>
-      <png-password
-        class="w-full mt-1"
-        label="Contraseña"
-        labelWidth="90"
-        [fg]="fg"
-        control="contrasena"
-        [required]="true"
-        autocomplete="off"></png-password>
-    </div>
-    <div class="flex">
-      <png-dropdown
-        class="w-full mt-1"
-        [fg]="fg"
-        control="baseDatos"
-        label="Base de Datos"
-        labelWidth="90"
-        [optionsValues]="baseDatosValues"
-        placeholder="&lt;Base de Datos&gt;"
-        [required]="true"
-        [disabled]="loadingDataBase"
-        [filter]="true"
-        [showClear]="true"></png-dropdown>
-      <png-button
-        class="ml-2"
-        icon="mdi mdi-refresh"
-        [raised]="true"
-        [rounded]="true"
-        [text]="true"
-        [disabled]="loadingDataBase"
-        [raised]="true"
-        [fullWidth]="true"
-        [loading]="loadingDataBase"
-        tooltip="Refrescar lista de Bases de Datos"
-        (clicked)="refreshDataBases()"></png-button>
-    </div>
-  </form>
+    <form [formGroup]="fg" style="width: 350px">
+        <div>
+            <png-dropdown
+                class="w-full mt-1"
+                [fg]="fg"
+                control="idDivision"
+                label="División"
+                labelWidth="90"
+                [optionsValues]="divisionesValues"
+                placeholder="&lt;División&gt;"
+                [required]="true"
+                [filter]="true"
+                [showClear]="true"></png-dropdown>
+        </div>
+        <div>
+            <png-dropdown
+                class="w-full mt-1"
+                [fg]="fg"
+                control="idUnidad"
+                label="Centro"
+                labelWidth="90"
+                [optionsValues]="unidadesValues"
+                placeholder="&lt;Unidad&gt;"
+                [required]="true"
+                [filter]="true"
+                [showClear]="true"></png-dropdown>
+        </div>
+        <div>
+            <png-checkbox
+                class="w-full mt-1"
+                label="Consolidado"
+                [fg]="fg"
+                control="consolidado"></png-checkbox>
+        </div>
+        <div>
+            <png-input-text
+                class="w-full mt-1"
+                label="Servidor"
+                labelWidth="90"
+                [fg]="fg"
+                control="ip"
+                [required]="true"
+                autocomplete="off"></png-input-text>
+        </div>
+        <div>
+            <png-input-text
+                class="w-full mt-1"
+                label="Usuario"
+                labelWidth="90"
+                [fg]="fg"
+                control="usuario"
+                [required]="true"
+                autocomplete="off"></png-input-text>
+        </div>
+        <div>
+            <png-password
+                class="w-full mt-1"
+                label="Contraseña"
+                labelWidth="90"
+                [fg]="fg"
+                control="contrasena"
+                [required]="true"
+                [toggleMask]="true"
+                autocomplete="off"></png-password>
+        </div>
+        <div class="flex">
+            <png-dropdown
+                class="w-full mt-1"
+                [fg]="fg"
+                control="baseDatos"
+                label="Base de Datos"
+                labelWidth="90"
+                [optionsValues]="baseDatosValues"
+                placeholder="&lt;Base de Datos&gt;"
+                [required]="true"
+                [disabled]="loadingDataBase"
+                [filter]="true"
+                [showClear]="true"></png-dropdown>
+            <png-button
+                class="ml-2"
+                icon="mdi mdi-refresh"
+                [raised]="true"
+                [rounded]="true"
+                [text]="true"
+                [disabled]="loadingDataBase"
+                [raised]="true"
+                [fullWidth]="true"
+                [loading]="loadingDataBase"
+                tooltip="Refrescar lista de Bases de Datos"
+                (clicked)="refreshDataBases()"></png-button>
+        </div>
+    </form>
 </app-add-edit-item>
