Se crea modulo y componente para la conciliacion de los Utiles y Herramientas

--- a/src/app/shared/ui/prime-ng/button/button.component.html
+++ b/src/app/shared/ui/prime-ng/button/button.component.html
@@ -1,27 +1,27 @@
 <button
-  pButton
-  pRipple
-  type="button"
-  [class.w-full]="fullWidth"
-  [label]="label"
-  [icon]="iconType"
-  [iconPos]="iconPos"
-  [disabled]="disabled"
-  [class.p-button-primary]="style === 'primary'"
-  [class.p-button-secondary]="style === 'secondary'"
-  [class.p-button-success]="style === 'success'"
-  [class.p-button-info]="style === 'info'"
-  [class.p-button-warning]="style === 'warning'"
-  [class.p-button-help]="style === 'help'"
-  [class.p-button-danger]="style === 'danger'"
-  [class.p-button-link]="style === 'link'"
-  [class.p-button-raised]="raised"
-  [class.p-button-rounded]="rounded"
-  [class.p-button-text]="text"
-  [class.p-button-outlined]="outlined"
-  [class.p-button-rounded]="rounded"
-  [class.p-button-lg]="size === 'large'"
-  [loading]="loading"
-  [pTooltip]="tooltip"
-  [tooltipPosition]="tooltipPosition"
-  (click)="onClicked($event)"></button>
+    pButton
+    pRipple
+    [type]="type"
+    [class.w-full]="fullWidth"
+    [label]="label"
+    [icon]="iconType"
+    [iconPos]="iconPos"
+    [disabled]="disabled"
+    [class.p-button-primary]="style === 'primary'"
+    [class.p-button-secondary]="style === 'secondary'"
+    [class.p-button-success]="style === 'success'"
+    [class.p-button-info]="style === 'info'"
+    [class.p-button-warning]="style === 'warning'"
+    [class.p-button-help]="style === 'help'"
+    [class.p-button-danger]="style === 'danger'"
+    [class.p-button-link]="style === 'link'"
+    [class.p-button-raised]="raised"
+    [class.p-button-rounded]="rounded"
+    [class.p-button-text]="text"
+    [class.p-button-outlined]="outlined"
+    [class.p-button-rounded]="rounded"
+    [class.p-button-lg]="size === 'large'"
+    [loading]="loading"
+    [pTooltip]="tooltip"
+    [tooltipPosition]="tooltipPosition"
+    (click)="onClicked($event)"></button>
