--- a/src/app/shared/ui/prime-ng/dropdown/dropdown.component.html
+++ b/src/app/shared/ui/prime-ng/dropdown/dropdown.component.html
@@ -23,6 +23,7 @@
         [disabled]="disabled"
         [showClear]="showClear"
         [autoDisplayFirst]="false"
+        [resetFilterOnHide]="true"
         [pTooltip]="getToolTip()"
         [tooltipPosition]="tooltipPosition"
         [tooltipStyleClass]="getToolTipStyleClass()">
