--- a/src/app/shared/ui/prime-ng/table/table.component.html
+++ b/src/app/shared/ui/prime-ng/table/table.component.html
@@ -35,6 +35,7 @@
     [dataKey]="groupField"
     [rows]="25"
     [rowsPerPageOptions]="[25, 50, 100]"
+    [responsiveLayout]="responsiveLayout"
     [loading]="loading"
     expandableRowGroups="true"
     expandableRows="true"
